
@startuml Command Component Diagram

skinparam class {
    BackgroundColor LightGreen
    BorderColor Black
    ArrowColor Black
}

package "Command" {
    interface CommandInterface <<Interface>> {
            + execute(): void
            + undo(): void
        }


    class AddBookCommand {
        - book: Book
        + AddBookCommand(book: Book): void
        + execute(): void
        + undo(): void
    }

    class DeleteBookCommand {
        - isbn: String
        - deletedBook: Book
        + DeleteBookCommand(isbn: String): void
        + execute(): void
        + undo(): void
    }

    class UpdateBookCommand {
        - isbn: String
        - oldBook: Book
        - updatedBook: Book
        + UpdateBookCommand(updatedBook: Book): void
        + execute(): void
        + undo(): void
    }
}

' Relazioni interne al package Command
CommandInterface <|.. AddBookCommand
CommandInterface <|.. DeleteBookCommand
CommandInterface <|.. UpdateBookCommand


@enduml
